--- a/recursos/unattend/CentOS/ks.cfg
+++ b/recursos/unattend/CentOS/ks.cfg
@@ -23,16 +23,20 @@ firstboot --disable
 bacula-client
 rear
 openssh-server
+dos2unix
 {{paquetes}}
 %end
 
-%post
-mkdir /tmp/workdir
-mount /dev/cdrom /tmp/workdir
-cp /tmp/workdir/post.sh /home/{{username}}/post.sh
-chown {{username}}:{{username}} /home/{{username}}/post.sh
-chmod 744  /home/{{username}}/post.sh
-./home/{{username}}/post.sh
-echo "Done!" > /home/{{username}}/mensaje.txt
-reboot --eject "/dev/cdrom"
+#%pre --interpreter=/usr/bin/bash --log=/mnt/sysimage/root/ks-pre.log
+#mkdir /servicios
+#mkdir /tmp/prueba
+#%end
+
+#--erroronfail
+%post --interpreter=/usr/bin/bash --nochroot  --log=/mnt/sysimage/ks-post.log
+mkdir /mnt/sysimage/servicios
+mkdir /mnt/sysimage/tmp/prueba
+mount /dev/sr0 /mnt/sysimage/tmp/prueba
+cp -r /mnt/sysimage/tmp/prueba/ConfigurarServiciosLinux/ /mnt/sysimage/servicios/
+umount /mnt/sysimage/tmp/prueba
 %end
