--- a/Configuracion/configuracion.json
+++ b/Configuracion/configuracion.json
@@ -2,12 +2,12 @@
     "Root": "E:\\SanboxTest",
     "MaquinasVirtuales": [
         {
-            "SistemaOperativo": "Debian 10",
-            "TipoAmbiente": "Xfce",
-            "Hostname": "ninobombastic",
+            "SistemaOperativo": "CentOS 8",
+            "TipoAmbiente": "gnome",
+            "Hostname": "aberwe",
             "DiscosVirtuales": [20],
             "Procesadores": 2,
-            "RutaISO": "E:\\SanboxTest\\debian-10.8.0-amd64-xfce-CD-1.iso",
+            "RutaISO": "E:\\SanboxTest\\CentOS-8.3.2011-x86_64-dvd1.iso",
             "MemoriaRAM": {
                 "Tipo": "Static",
                 "Memoria": 1.0
