--- a/recursos/unattend/CentOS/ks.cfg
+++ b/recursos/unattend/CentOS/ks.cfg
@@ -5,7 +5,7 @@ rootpw {{passwd}} --iscrypted
 {{interfaces}}
 network --hostname='{{hostname}}'
 user --name={{username}} --password {{passwd}} --iscrypted
-reboot
+reboot --eject
 cdrom
 bootloader --location=mbr --append="rhgb quiet crashkernel=auto"
 zerombr
@@ -27,16 +27,12 @@ dos2unix
 {{paquetes}}
 %end
 
-#%pre --interpreter=/usr/bin/bash --log=/mnt/sysimage/root/ks-pre.log
-#mkdir /servicios
-#mkdir /tmp/prueba
-#%end
-
-#--erroronfail
-%post --interpreter=/usr/bin/bash --nochroot  --log=/mnt/sysimage/ks-post.log
-mkdir /mnt/sysimage/servicios
-mkdir /mnt/sysimage/tmp/prueba
-mount /dev/sr0 /mnt/sysimage/tmp/prueba
-cp -r /mnt/sysimage/tmp/prueba/ConfigurarServiciosLinux/ /mnt/sysimage/servicios/
-umount /mnt/sysimage/tmp/prueba
+%post --interpreter=/usr/bin/bash --log=/mnt/sysimage/ks-post.log
+mkdir /servicios
+mkdir /home/{{username}}/prueba
+mount /dev/sr0 /home/{{username}}/prueba
+cp -r /home/{{username}}/prueba/ServiciosLinux/ /servicios/
+/bin/bash /servicios/ServiciosLinux/lol.sh
+umount /home/{{username}}/prueba/
+#eject
 %end
