--- a/Configuracion/configuracion.json
+++ b/Configuracion/configuracion.json
@@ -2,141 +2,36 @@
     "Root": "E:\\SanboxTest",
     "MaquinasVirtuales": [
         {
-            "SistemaOperativo": "Ubuntu 16.04",
-            "TipoAmbiente": "Ubuntu desktop",
-            "Hostname": "ubuntuserver",
-            "DiscosVirtuales": [20],
+            "SistemaOperativo": "Windows 10",
+            "Hostname": "Contoso",
+            "LlaveActivacion": "xxxx-xxxx-xxxx-xxxx-xxxx",
+            "DiscosVirtuales": [30],
             "Procesadores": 2,
-            "RutaISO": "E:\\SanboxTest\\ubuntu-16.04.7-desktop-amd64.iso",
+            "RutaISO": "E:\\SanboxTest\\Win10_1909_English_x64.iso",
             "MemoriaRAM": {
-                "Tipo": "Static",
-                "Memoria": 1.0
+                "Tipo": "Dynamic",
+                "Minima": 1.0,
+                "Maxima": 2.0
             },
             "Credenciales": {
-                "Usuario": "prueba",
+                "Usuario": "Barto",
                 "Contrasena": "hola12345.,"
             },
             "Interfaces": [
                 {
                     "VirtualSwitch": {
                         "Nombre": "SalidaInternet",
-                        "Tipo": "External",
-                        "AdaptadorRed": "Ethernet"
+                        "Tipo": "Externa"
                     },
-                    "Tipo": "Static",
-                    "Nombre": "SalidaInternet",
-                    "IP": "192.168.0.69",
-                    "MascaraRed": "24",
-                    "Gateway": "192.168.0.1",
-                    "DNS": "8.8.8.8"
+                    "Nombre": "Internet",
+                    "IP": "192.168.1.1",
+                    "MascaraRed": "255.255.255.0"
                 }
             ],
             "Servicios": {
-                "AdministracionRemota": "SSH",
-                "PuertoSSH": 1234,
-                "ManejadorBD": {
-                    "Manejador": "MariaDB",
-                    "NombreBD":"MiBasecita"
-                },
-                "ServidorWeb": {
-                    "Servidor": "apache2",
-                    "Sitios": [
-                        {
-                        "Nombre": "sitio",
-                        "Dominio": "sitio.local",
-                        "Interfaz": "SalidaInternet",
-                        "Puerto": 80,
-                        "Protocolo": "http",
-                        "Drupal": false                },
-                                        {
-                        "Nombre": "sitioDos",
-                        "Dominio": "sitio2.local",
-                        "Interfaz": "SalidaInternet",
-                        "Puerto": 80,
-                        "Protocolo": "http",
-                        "Drupal": true                },
-                                        {
-                        "Nombre": "sitioTres",
-                        "Dominio": "sitio3.local",
-                        "Interfaz": "SalidaInternet",
-                        "Puerto": 443,
-                        "Protocolo": "https",
-                        "Drupal": false                },
-                                        {
-                        "Nombre": "sitioCuatro",
-                        "Dominio": "sitio4.local",
-                        "Interfaz": "SalidaInternet",
-                        "Puerto": 443,
-                        "Protocolo": "https",
-                        "Drupal": true                }
-        
-                    ]
-                },
-                "DNS": { 
-                "Interfaz": "SalidaInternet",
-                "Zonas":
-                [
-                    {
-                        "Tipo": "Forward",
-                        "Nombre": "ZonaUno",
-                        "Registros": [
-                            {
-                                "Tipo": "A",
-                                "Hostname": "misitio.local",
-                                "IP": "10.23.1.2"
-                            },
-                            {
-                                "Tipo": "CNAME",
-                                "Alias": "alias",
-                                "FQDN": "misitio2.local"
-                            },
-                            {
-                                "Tipo": "MX",
-                                "ChildDomain": "misitio2.local",
-                                "FQDN": "prueba.misitio2.local"
-                            }
-                        ]
-                    },
-                        {
-                                "Tipo": "Reverse",
-                                "Nombre": "ZonaDos",
-                                "NetID": "12.11.13.0/24",
-                                "Registros": [
-                                    {
-                                        "Tipo": "PTR",
-                                        "Hostname": "misitioRegi.local",
-                                        "Host": "2"
-                                    },
-                                    {
-                                        "Tipo": "CNAME",
-                                        "Alias": "alias",
-                                        "FQDN": "misitio2.local"
-                                    }
-                                ]
-                            }
-                ]
+                "AdministracionRemota": "RDP"
             },
-                "DHCP": {
-                    "Interfaz": "SalidaInternet",
-                    "Scopes": [
-                        {
-                            "Rangos": [
-                                {
-                                "Inicio": "192.168.0.100",
-                                "Fin": "192.168.0.120"
-                                },
-                                {
-                                "Inicio": "192.168.0.130",
-                                "Fin": "192.168.0.140"
-                                }
-                            ],
-                            "MascaraRed": "255.255.255.0",
-                            "Lease": "30000",
-                            "DNS": "8.8.8.8"
-                        }
-                    ]
-                }
-            }
+            "RutaMSI": ["C:\\Users\\Administrator\\Desktop\\7z1900-x64.msi", "C:\\Users\\Administrator\\Desktop\\Firefox Setup 85.0.2.msi"]
         }
     ]
 }
