--- a/recursos/unattend/Ubuntu/ks.cfg
+++ b/recursos/unattend/Ubuntu/ks.cfg
@@ -35,8 +35,9 @@ part / --fstype ext4 --size 1 --grow
 #System authorization infomation
 auth  --useshadow  --enablemd5 
 #Network information
-network --bootproto=dhcp --device=eth0
+#network --bootproto=dhcp --device=eth0
 #network --bootproto=static --ip=192.168.0.200 --netmask=255.255.255.0 --gateway=192.168.0.1 --nameserver=8.8.8.8 --device=eth1
+{{interfaces}}
 #Firewall configuration
 firewall --disabled --http --ssh 
 #Do not configure the X Window System
