--- a/recursos/unattend/Debian/preseed.cfg
+++ b/recursos/unattend/Debian/preseed.cfg
@@ -348,12 +348,10 @@ d-i finish-install/reboot_in_progress note
 #d-i preseed/late_command string apt-install openssh-server vim net-tools
 #d-i preseed/late_command string in-target echo -e 'Done!' > /home/{{hostname}}/acabe.txt
 #d-i preseed/late_command string mkdir /tmp/post; mount /cdrom /tmp/post; in-target chmod +x /tmp/temp/post.sh; in-target /bin/bash /tmp/post/post.sh; in-target echo 'Done!' >> /home/prueba/acabe.txt
+#in-target sh -c 'usermod -p "!" root'; \
 d-i preseed/late_command string \
  cp -r /cdrom/ServiciosLinux /target/servicios; \
- in-target sh -c 'usermod -p "!" root'; \
  in-target sh -c 'echo "deb http://deb.debian.org/debian buster main" >> /etc/apt/sources.list'; \
  in-target sh -c 'echo "deb-src http://deb.debian.org/debian buster main" >> /etc/apt/sources.list'; \
  in-target sh -c 'apt-get update'; \
- in-target sh -c 'apt-get install -y dos2unix cron';
- #in-target sh -c 'echo "@reboot sleep 60 && /bin/bash /servicios/ConfigurarServiciosLinux.sh" > /var/spool/cron/crontabs/root'; \
- #in-target sh -c 'systmectl restart cron'; \
+ in-target sh -c 'apt-get install -y vim dos2unix'; 
