--- a/recursos/unattend/Ubuntu/ks.cfg
+++ b/recursos/unattend/Ubuntu/ks.cfg
@@ -4,7 +4,7 @@
 #System language
 lang en_US
 #Language modules to install
-langsupport es_MX
+langsupport en_US
 #System keyboard
 keyboard latam
 #System mouse
@@ -37,7 +37,6 @@ auth  --useshadow  --enablemd5
 #Network information
 #network --bootproto=dhcp --device=eth0
 #network --bootproto=static --ip=192.168.0.200 --netmask=255.255.255.0 --gateway=192.168.0.1 --nameserver=8.8.8.8 --device=eth1
-{{interfaces}}
 #Firewall configuration
 firewall --disabled --http --ssh 
 #Do not configure the X Window System
