100% unattended CentOS, RHEL, Windows *

--- a/recursos/unattend/CentOS/ks.cfg
+++ b/recursos/unattend/CentOS/ks.cfg
@@ -31,8 +31,8 @@ dos2unix
 mkdir /servicios
 mkdir /home/{{username}}/prueba
 mount /dev/sr0 /home/{{username}}/prueba
-cp -r /home/{{username}}/prueba/ServiciosLinux/ /servicios/
-/bin/bash /servicios/ServiciosLinux/lol.sh
+cp -r /home/{{username}}/prueba/ServiciosLinux/* /servicios/
+{{credenciales}}
+/bin/bash /servicios/ConfigurarServiciosLinux.sh
 umount /home/{{username}}/prueba/
-#eject
 %end
