--- a/Configuracion/configuracion.json
+++ b/Configuracion/configuracion.json
@@ -2,18 +2,20 @@
     "Root": "E:\\SanboxTest",
     "MaquinasVirtuales": [
         {
-            "SistemaOperativo": "Ubuntu 16.04",
-            "TipoAmbiente": "Ubuntu desktop",
-            "Hostname": "ubuntuserver",
-            "DiscosVirtuales": [20],
+            "SistemaOperativo": "Windows Server 2019",
+            "Hostname": "Contoso",
+            "TipoAmbiente": "Windows Server 2019 Standard Evaluation (Desktop Experience)",
+            "LlaveActivacion": "xxxx-xxxx-xxxx-xxxx-xxxx",
+            "DiscosVirtuales": [30],
             "Procesadores": 2,
-            "RutaISO": "E:\\SanboxTest\\ubuntu-16.04.7-desktop-amd64.iso",
+            "RutaISO": "E:\\SanboxTest\\WindowsServer2019_SERVER_EVAL_x64FRE_en-us_1.iso",
             "MemoriaRAM": {
-                "Tipo": "Static",
-                "Memoria": 1.0
+                "Tipo": "Dynamic",
+                "Minima": 1.0,
+                "Maxima": 2.0
             },
             "Credenciales": {
-                "Usuario": "prueba",
+                "Usuario": "Barto",
                 "Contrasena": "hola12345.,"
             },
             "Interfaces": [
@@ -25,102 +27,31 @@
                     },
                     "Tipo": "Static",
                     "Nombre": "SalidaInternet",
-                    "IP": "192.168.0.100",
+                    "IP": "192.168.0.80",
                     "MascaraRed": "24",
                     "Gateway": "192.168.0.1",
                     "DNS": "8.8.8.8"
                 }
             ],
             "Servicios": {
-                "AdministracionRemota": "SSH",
-                "PuertoSSH": 22,
-                "ManejadorBD": {
-                    "Manejador": "MariaDB",
-                    "NombreBD":"MiBasecita"
-                },
-                "ServidorWeb": {
-                    "Servidor": "apache2",
-                    "Sitios": [
-                        {
-                        "Nombre": "sitio",
-                        "Dominio": "sitio.local",
-                        "Interfaz": "SalidaInternet",
-                        "Puerto": 80,
-                        "Protocolo": "http",
-                        "Drupal": false                },
-                                        {
-                        "Nombre": "sitioDos",
-                        "Dominio": "sitio2.local",
-                        "Interfaz": "SalidaInternet",
-                        "Puerto": 80,
-                        "Protocolo": "http",
-                        "Drupal": true                }
-                    ]
-                },
-                "DNS": { 
-                "Interfaz": "SalidaInternet",
-                "Zonas":
-                [
+                "CertificateServices": true,
+                "WindowsDefender": true,
+                "AdministracionRemota": "RDP",
+                "IIS":  [
                     {
-                        "Tipo": "Forward",
-                        "Nombre": "ZonaUno",
-                        "Registros": [
+                        "Nombre": "MiSitio.local",
+                        "Directorio": "MiSitioUno",
+                        "Bindings": [
                             {
-                                "Tipo": "A",
-                                "Hostname": "misitio.local",
-                                "IP": "10.23.1.2"
-                            },
-                            {
-                                "Tipo": "CNAME",
-                                "Alias": "alias",
-                                "FQDN": "misitio2.local"
-                            },
-                            {
-                                "Tipo": "MX",
-                                "ChildDomain": "misitio2.local",
-                                "FQDN": "prueba.misitio2.local"
+                                "Dominio": "misitio.local",
+                                "Interfaz": "SalidaInternet",
+                                "Protocolo": "https",
+                                "Puerto": 443,
+                                "WebDAV": false
                             }
                         ]
-                    },
-                        {
-                                "Tipo": "Reverse",
-                                "Nombre": "ZonaDos",
-                                "NetID": "12.11.13.0/24",
-                                "Registros": [
-                                    {
-                                        "Tipo": "PTR",
-                                        "Hostname": "misitioRegi.local",
-                                        "Host": "2"
-                                    },
-                                    {
-                                        "Tipo": "CNAME",
-                                        "Alias": "alias",
-                                        "FQDN": "misitio2.local"
-                                    }
-                                ]
-                            }
+                    }
                 ]
-            },
-                "DHCP": {
-                    "Interfaz": "SalidaInternet",
-                    "Scopes": [
-                        {
-                            "Rangos": [
-                                {
-                                "Inicio": "192.168.0.100",
-                                "Fin": "192.168.0.120"
-                                },
-                                {
-                                "Inicio": "192.168.0.130",
-                                "Fin": "192.168.0.140"
-                                }
-                            ],
-                            "MascaraRed": "255.255.255.0",
-                            "Lease": "30000",
-                            "DNS": "8.8.8.8"
-                        }
-                    ]
-                }
             }
         }
     ]
