--- a/recursos/unattend/Debian/preseed.cfg
+++ b/recursos/unattend/Debian/preseed.cfg
@@ -102,7 +102,7 @@ d-i partman/confirm_nooverwrite boolean true
 d-i partman-partitioning/confirm_write_new_label boolean true
 
 
-d-i apt-setup/disable-cdrom-entries boolean true
+#d-i apt-setup/disable-cdrom-entries boolean true
 # If the system has free space you can choose to only partition that space.
 #d-i partman-auto/init_automatically_partition select biggest_free
 
