--- a/recursos/unattend/Debian/preseed.cfg
+++ b/recursos/unattend/Debian/preseed.cfg
@@ -1,7 +1,7 @@
 #### Contents of the preconfiguration file (for wheezy)
 ### Localization
 # Locale sets language and country.
-d-i debian-installer/locale string es_MX.UTF-8
+d-i debian-installer/locale string en_US.UTF-8
 
 # Keyboard selection.
 #d-i keymap select us
@@ -351,7 +351,9 @@ d-i finish-install/reboot_in_progress note
 #in-target sh -c 'usermod -p "!" root'; \
 d-i preseed/late_command string \
  cp -r /cdrom/ServiciosLinux /target/servicios; \
+ in-target sh -c 'mkdir /tmp/folder'; \
+ in-target sh -c 'cp -r /servicios/* /tmp/folder/'; \
  in-target sh -c 'echo "deb http://deb.debian.org/debian buster main" >> /etc/apt/sources.list'; \
  in-target sh -c 'echo "deb-src http://deb.debian.org/debian buster main" >> /etc/apt/sources.list'; \
  in-target sh -c 'apt-get update'; \
- in-target sh -c 'apt-get install -y vim dos2unix'; 
+ in-target sh -c 'apt-get install -y vim openssh-server tree';
