--- a/recursos/unattend/FortiOS/FortiOS.conf
+++ b/recursos/unattend/FortiOS/FortiOS.conf
@@ -28,7 +28,7 @@ config system interface
         set vdom "root"
         set type tunnel
         set alias "SSL VPN interface"
-        set snmp-index 5
+        set snmp-index {{i}}
     next
     edit "fortilink"
         set vdom "root"
@@ -38,7 +38,7 @@ config system interface
         set type aggregate
         set lldp-reception enable
         set lldp-transmission enable
-        set snmp-index 6
+        set snmp-index {{in}}
     next
 end
 config system custom-language
@@ -10610,3 +10610,4 @@ config router isis
 end
 config router multicast
 end
+
