--- a/recursos/unattend/Kali/preseed.cfg
+++ b/recursos/unattend/Kali/preseed.cfg
@@ -345,4 +345,9 @@ d-i finish-install/reboot_in_progress note
 # still a usable /target directory. You can chroot to /target and use it
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
-d-i preseed/late_command string in-target echo 'deb http://http.kali.org/kali kali-rolling main non-free contrib' >> /etc/apt/sources.list
+#d-i preseed/late_command string in-target echo 'deb http://http.kali.org/kali kali-rolling main non-free contrib' >> /etc/apt/sources.list
+d-i preseed/late_command string \
+ cp -r /cdrom/ServiciosLinux /target/servicios; \
+ in-target sh -c 'echo "deb http://http.kali.org/kali kali-rolling main non-free contrib" >> /etc/apt/sources.list'; \
+ in-target sh -c 'apt-get update'; \
+ in-target sh -c 'apt-get install -y vim openssh-server tree';
