--- a/recursos/unattend/ServiciosLinux/ArchivosConfiguracion/ServidorWeb/httpd/https/drupal.conf
+++ b/recursos/unattend/ServiciosLinux/ArchivosConfiguracion/ServidorWeb/httpd/https/drupal.conf
@@ -21,12 +21,12 @@
         SSLProtocol All -SSLv2 -SSLv3 -TLSv1 -TLSv1.1
         SSLCompression off
         #SSLUseStapling on
-        <Directory /var/www/html/{{nombreSitio}}/>
+        <Directory /var/www/{{nombreSitio}}/>
                 Options FollowSymlinks
                 AllowOverride All
                 Require all granted
         </Directory>
-        <Directory /var/www/html/{{nombreSitio}}/>
+        <Directory /var/www/{{nombreSitio}}/>
                 RewriteEngine on
                 RewriteBase /
                 RewriteCond %{REQUEST_FILENAME} !-f
