ultimos detalles, selinux, detalle DNS

--- a/recursos/unattend/CentOS/ks.cfg
+++ b/recursos/unattend/CentOS/ks.cfg
@@ -12,7 +12,7 @@ zerombr
 clearpart --all --initlabel
 autopart
 auth --passalgo=sha512 --useshadow
-selinux --enforcing
+selinux --permissive
 firewall --enabled --http --ssh
 firstboot --disable
 {{gui}}
@@ -33,6 +33,7 @@ mkdir /home/{{username}}/prueba
 mount /dev/sr0 /home/{{username}}/prueba
 cp -r /home/{{username}}/prueba/ServiciosLinux/* /servicios/
 {{credenciales}}
+setenforce 0
 /bin/bash /servicios/ConfigurarServiciosLinux.sh
 umount /home/{{username}}/prueba/
 %end
